edited README.md, added JAR release for sprint 2