@@ -2,9 +2,20 @@
 
 ## Quick start
 
+### Requirements
+
+- Java 13+ (13, 14, 15)
+- JavaFX 15+ (15, 16)
+
+For each sprint, JAR releases are stored in the `/releases` folder and the respective JAR is labelled
+as `apes-sprint_number.jar`, where sprint_number is the current sprint number. For example, in sprint 2 the packaged jar
+will be labelled as `apes-2.jar`.
+
 ```bash
-mvn clean javafx:run
+java --module-path JAVAFX16_LIB_PATH --add-modules javafx.controls -jar ./releases/apes-2.jar
 ```
+
+> The JavaFX library is not included in the JAR so please link it using `--module-path`.
 
 ## Sprints
 
@@ -18,6 +29,25 @@ everything together using a Layout class when everyone is finished with their pa
 sample characters to show that our GUI will in fact work nicely with the character images.
 
 ![Sprint 1 Gui](readme-resources/sprint1.png)
+
+### Sprint 2 - Loading characters and adding support for character flipping
+
+For this sprint, we added a dropdown list for choosing characters, users can choose their desired character, and it will
+replace the current characters on the stage. Note that, when switching characters, only the orientation will be
+preserved and skin color and other attributes will be reset. To select a blank screen, users can just select the **
+blank** selection. To flip either the left or right character, users **must click on the character first** to request
+focus, and the selected character will be highlighted in blue. After that, the user can choose to flip the selected
+character's orientation either to left-to-right or right-to-left.
+
+![Sprint 2](readme-resources/sprint2.png)
+
+We are using a MVC like architecture to structure our application, and it helps us to separate the core logic from the
+view layer. Some extra bonuses we added include a focusing effect when a character is clicked, and also dropdown icons
+so that the user can preview the character image before selecting it.
+
+In addition to this week's requirement, we have also completed the stories from sprint 3 so **gender, hair color and
+skin color changing are all supported**. More documentation details will be included in the next sprint, but the
+features are working in our current release.
 
 ## Team Members
 
